Racial update + ko-fi

--- a/content/psionics.html
+++ b/content/psionics.html
@@ -11,6 +11,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="../pergasha.css">
     <link rel="shortcut icon" href="../assets/icons/pergasha-icon.ico" />
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 
     <title>Psionics - Pergasha</title>
 </head>
@@ -66,6 +67,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="rules.html">Rules</a>
+                    </li>
+                    <li class="nav-item align-self-center ml-3">
+                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi" style="color: white;"
+                                data-width="40" data-height="40"></span></a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
@@ -1887,7 +1892,7 @@
                                     <ul>
                                         <li><strong>Passive:</strong> On a successful hit with your ranged weapon, you
                                             can push a target 5 feet back. The target must be able to fit in the space
-                                            andmust be Huge or smaller to be affected.</li>
+                                            and must be Huge or smaller to be affected.</li>
                                         <li><strong>Pin Them Down!</strong> As an action, select a point on the ground
                                             within your weapon’s range. You create a hail of force missiles in a 25-foot
                                             diameter, 50-foot-tall cylinder. All creatures in the cylinder must
