--- a/content/rules.html
+++ b/content/rules.html
@@ -11,6 +11,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="../pergasha.css">
   <link rel="shortcut icon" href="../assets/icons/pergasha-icon.ico" />
+  <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 
 
   <title>Rules - Pergasha</title>
@@ -67,6 +68,10 @@
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="rules.html">Rules</a>
+          </li>
+          <li class="nav-item align-self-center ml-3">
+            <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi"
+                style="color: white;" data-width="40" data-height="40"></span></a>
           </li>
         </ul>
         <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
