--- a/pergasha.html
+++ b/pergasha.html
@@ -11,8 +11,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="pergasha.css">
     <link rel="shortcut icon" href="assets/icons/pergasha-icon.ico" />
-
-
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <title>Pergasha</title>
 </head>
 
@@ -68,6 +67,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="content/rules.html">Rules</a>
                     </li>
+                    <li class="nav-item align-self-center ml-3">
+                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi"
+                                style="color: white;" data-width="40" data-height="40"></span></a>
+                    </li>
+
                 </ul>
                 <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
                 <div class="d-none" id="notlogged">
@@ -136,12 +140,7 @@
         </a>
     </div>
 
-    <footer class="text-right mr-2">
-        <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-        <script
-            type='text/javascript'>kofiwidget2.init('Buy me a coffee', '#87898a', 'B0B15MGC4'); kofiwidget2.draw();</script>
-    </footer>
-
+    <!-- <footer class="text-right mr-2"></footer> -->
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
