--- a/content/Infusions.html
+++ b/content/Infusions.html
@@ -67,7 +67,7 @@
           <li class="nav-item">
             <a class="nav-link" href="rules.html">Rules</a>
           </li>
-          <li class="nav-item align-self-center ml-3">
+          <li class="nav-item" id="ko-fi-icon">
             <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi"
                 style="color: white;" data-width="40" data-height="40"></span></a>
           </li>
