--- a/content/training.html
+++ b/content/training.html
@@ -47,7 +47,8 @@
                             <a class="dropdown-item" href="races.html">Races</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="feats.html">Feats</a>
-                            <a class="dropdown-item" href="infusions.html">Infusions</a>
+                            <a class="dropdown-item" href="infusions.html"
+                                style="pointer-events: none; color: gray">Infusions</a>
                             <a class="dropdown-item" href="training.html">Training</a>
                         </div>
                     </li>
@@ -69,7 +70,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="rules.html">Rules</a>
                     </li>
-                    <li class="nav-item align-self-center ml-3">
+                    <li class="nav-item" id="ko-fi-icon">
                         <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi"
                                 style="color: white;" data-width="40" data-height="40"></span></a>
                     </li>
