--- a/content/items.html
+++ b/content/items.html
@@ -46,7 +46,8 @@
                             <a class="dropdown-item" href="races.html">Races</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="feats.html">Feats</a>
-                            <a class="dropdown-item" href="infusions.html">Infusions</a>
+                            <a class="dropdown-item" href="infusions.html"
+                                style="pointer-events: none; color: gray">Infusions</a>
                             <a class="dropdown-item" href="training.html">Training</a>
                         </div>
                     </li>
@@ -68,9 +69,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="rules.html">Rules</a>
                     </li>
-                    <li class="nav-item align-self-center ml-3">
-                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi"
-                                style="color: white;" data-width="40" data-height="40"></span></a>
+                    <li class="nav-item" id="ko-fi-icon">
+                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi" style="color: white;"
+                                data-width="40" data-height="40"></span></a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
@@ -997,7 +998,7 @@
                     </tr>
                     <tr>
                         <td>Crossbow, Light</td>
-                        <td>2d6 Piercing</td>
+                        <td>1d8 Piercing</td>
                         <td class="text-center">80/320</td>
                         <td>Ammunition, Forceful (1), Loading (1), Stock, Two-handed, Mastery (Quick Reload)</td>
                         <td class="text-center">2</td>
@@ -1040,7 +1041,7 @@
                     </tr>
                     <tr>
                         <td>Crossbow, Hand</td>
-                        <td>2d4 Piercing</td>
+                        <td>1d6 Piercing</td>
                         <td class="text-center">30/120</td>
                         <td>Ammunition, Light, Loading (1), Point Blank, Mastery (Quick Reload)</td>
                         <td class="text-center">1</td>
@@ -1048,7 +1049,7 @@
                     </tr>
                     <tr>
                         <td>Crossbow, Heavy</td>
-                        <td>2d8 Piercing</td>
+                        <td>1d10 Piercing</td>
                         <td class="text-center">100/400</td>
                         <td>Ammunition, Forceful (2), Loading (2), Stock, Two-handed, Velocity, Mastery (Quick
                             Reload)</td>
@@ -2909,13 +2910,9 @@
                         <span class="class-nav-item">Forceful</span>
                     </li>
                     <div class="collapse abilities property-desc" id="property-2" data-parent="#property-list">
-                        <p class="pt-4 pr-4 pl-4 pb-0">Ranged weapons with the Forceful property deal additional
-                            damage when you shoot from an advantageous position. The following conditions allow you
-                            to add a number of d4 of the same damage type up to the value shown in parenthesis.
-                        <ul class="ml-4 pb-4">
-                            <li class="internal-list">Your target is within 15 feet of you.</li>
-                            <li class="internal-list">For each 3 points by which you beat the target’s AC.</li>
-                        </ul>
+                        <p class="pt-4 pr-4 pl-4 pb-0">Ranged weapons with the Forceful property deal additional damage
+                            due to their stopping power. For each 5 points by which you beat the target’s AC, you may
+                            add a damage die up to the value shown in parenthesis.
                         </p>
                     </div>
 
