--- a/content/races.html
+++ b/content/races.html
@@ -46,7 +46,8 @@
                             <a class="dropdown-item" href="races.html">Races</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="feats.html">Feats</a>
-                            <a class="dropdown-item" href="infusions.html">Infusions</a>
+                            <a class="dropdown-item" href="infusions.html"
+                                style="pointer-events: none; color: gray">Infusions</a>
                             <a class="dropdown-item" href="training.html">Training</a>
                         </div>
                     </li>
@@ -68,9 +69,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="rules.html">Rules</a>
                     </li>
-                    <li class="nav-item align-self-center ml-3">
-                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi"
-                                style="color: white;" data-width="40" data-height="40"></span></a>
+                    <li class="nav-item" id="ko-fi-icon">
+                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi" style="color: white;"
+                                data-width="40" data-height="40"></span></a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
@@ -95,6 +96,7 @@
     <div class="row justify-content-center mt-2"><button type="button"
             class="btn btn-outline-secondary text-center mb-2 align-self-center" onclick="switchRaces()" id="raceButton"
             style="box-shadow: none;">Old Races</button></div>
+            
     <div class="row mt-5 mb-5 flex-wrap justify-content-center container-fluid" id="race-container">
 
         <div class="col mb-5" id="race-list-container">
@@ -1150,7 +1152,7 @@
                 </tbody>
             </table>
             <table class="table-sm shadow race-table tab-pane fade" id="touchedKin" role="tabpanel"
-                aria-labelledby="touchedKin-list">
+                aria-labelledby="touchedKin-list" style="max-width: max-content">
                 <tbody>
                     <tr colspan="10">
                         <th class="class-border border-0" colspan="10"></th>
@@ -1281,7 +1283,7 @@
                         <td>
                             <strong>Chitinous Shell Skin.</strong> You grow a tough shell over your body.
                             When not wearing any armor, your AC = 10 + your Constitution
-                            modifier + your proficiency bonus.<i>(Cannot have Direskin.)</i>
+                            modifier + your proficiency bonus. <i>(Cannot have Direskin.)</i>
                         </td>
                     </tr>
                     <tr class="touchedKinFeatures hide">
