--- a/pergasha.html
+++ b/pergasha.html
@@ -45,7 +45,8 @@
                             <a class="dropdown-item" href="content/races.html">Races</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="content/feats.html">Feats</a>
-                            <a class="dropdown-item" href="content/infusions.html">Infusions</a>
+                            <a class="dropdown-item" href="content/infusions.html"
+                                style="pointer-events: none; color: gray">Infusions</a>
                             <a class="dropdown-item" href="content/training.html">Training</a>
                         </div>
                     </li>
@@ -67,7 +68,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="content/rules.html">Rules</a>
                     </li>
-                    <li class="nav-item align-self-center ml-3">
+                    <li class="nav-item" id="ko-fi-icon">
                         <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi"
                                 style="color: white;" data-width="40" data-height="40"></span></a>
                     </li>
