Adding Fatigue and Burn + item fix

--- a/content/rules.html
+++ b/content/rules.html
@@ -251,14 +251,14 @@
             masteries you have already acquired.</p>
           <p> Finding a trainer or learning with an ally who has already mastered the same weapon may decrease the
             length of time needed to master a weapon. </p>
-          <h3 class="arjulian">Multiclassing</h3>
+          <!-- <h3 class="arjulian">Multiclassing</h3>
           <p>The GM needs to be informed in advance regarding multiclassing. You need to have a reasonable explanation
             as to how you acquire the skills and roleplay that in the level prior to you taking the new class. This
             means you cannot decide to multiclass at the moment you gain a new level – you need to plan ahead. </p>
           <p> For example, if you are a 3rd level Rogue and you would like to take a level in Fighter, you must
             roleplay during this third level how you slowly acquire some of the necessary skills to become proficient
             in this new style of combat. You could get training from a fellow party member and spar during downtime or
-            evenings at camp, read manuals on combat, and take notes while observing combat situations. </p>
+            evenings at camp, read manuals on combat, and take notes while observing combat situations. </p> -->
         </div>
         <div class="p-2" id="section3">
           <h1 class="arjulian section-title">Inspiration Points & Cheating Fate</h1>
@@ -824,7 +824,7 @@
           </div>
           <h3 class="arjulian">Critical Hits</h3>
           <p>The other side of the coin is that when you roll a natural 20, you succeed. Rolling a natural 20 or a
-            critical hit for an attack roll maximizes the extra damage dice applicable for the attack. The extra
+            critical hit for an attack roll doubles the damage dice of the attack. The extra
             damage dice include the weapon’s damage, sneak attack damage, and any abilities that are triggered before
             the attack roll is made (for example, paying Psi Points for bonus damage). Any abilities that you trigger
             as a reaction or result of a successful hit are rolled normally.</p>
@@ -2433,6 +2433,82 @@
           </ul>
           The DC for any talent is 8 + your proficiency modifier + your Intelligence modifier.
           </p>
+          <h5 class="arjulian">Burn</h5>
+          <p>Another key feature of a psionic talent is the ability to overcharge it, enabling a burst of power
+            unavailable through
+            other means. This feature is called Burn, and each talent has its burn listed at the end of its description.
+          </p>
+
+          <p>A burn uses the same action economy associated with the talent unless specified otherwise. Once you burn a
+            talent, you
+            cannot use that specific talent until you take a full rest.</p>
+
+          <p>In addition, you must succeed on an Intelligence saving throw (DC = 15) or suffer one level of Fatigue. If
+            a specific
+            burn has additional side effects, it will be listed in its description. If a talent lists more than one burn
+            option, you
+            must pick which ability you activate.</p>
+
+          <p>You can burn any talent you have, but each talent can only be burned once before needing to be recharged
+            with a full
+            rest. Also, the DC for the Intelligence saving throw to avoid Fatigue increases by 2 for each burn you take
+            after the
+            first.</p>
+
+          <h4 class="arjulian">Fatigue</h4>
+          <p>Fatigue represents mental weariness similar to how exhaustion effects the body. Psionics is a mentally
+            taxing power
+            that, if mismanaged, can can cause the mind and body to break down. Some abilities, features, or effects may
+            add levels
+            of fatigue, demonstrating mental exertion.</p>
+          <p>Fatigue is similar to exhaustion in that each level gained has different effects, and all effects are
+            cumulative. Refer
+            to the Fatigue Effects table at the end of this section for more information.</p>
+          <p>Recovering from fatigue requires mindful resting. Meditating while taking a long rest will remove one level
+            of fatigue.
+            Taking a full rest will remove two levels of fatigue. Some abilities or items may also remove fatigue.</p>
+
+          <h5 class="arjulian">Fatigue Effects</h5>
+          <table class="table-sm table table-striped table-responsive-sm table-bordered" style="max-width: 1000px;">
+            <thead class="thead-dark">
+              <th class="text-center">Level</th>
+              <th>Effect</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text-center">1</td>
+                <td>Take 1d4 damage* when activating psionics</td>
+              </tr>
+              <tr>
+                <td class="text-center">2</td>
+                <td>Reduce Psi Limit by 1</td>
+              </tr>
+              <tr>
+                <td class="text-center">3</td>
+                <td>Unable to maintain a Psychic Focus</td>
+              </tr>
+              <tr>
+                <td class="text-center">4</td>
+                <td>Gain 1 level of exhaustion</td>
+              </tr>
+              <tr>
+                <td class="text-center">5</td>
+                <td>Unable to maintain concentration</td>
+              </tr>
+              <tr>
+                <td class="text-center">6</td>
+                <td>Overdrive</td>
+              </tr>
+            </tbody>
+          </table>
+          <p>*<i>This damage cannot be reduced in any way.</i></p>
+          <h5 class="arjulian">Overdrive</h5>
+          <p>This occurs when a psionic mind shatters from exertion. A powerful burst of energy explodes from the
+            individual, dealing
+            1d10 psychic damage per character level to all other creatures within a 30-foot radius before rendering the
+            individual
+            unconscious.</p>
+
         </div>
       </div>
     </div>
