--- a/content/items.html
+++ b/content/items.html
@@ -70,8 +70,8 @@
                         <a class="nav-link" href="rules.html">Rules</a>
                     </li>
                     <li class="nav-item" id="ko-fi-icon">
-                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi" style="color: white;"
-                                data-width="40" data-height="40"></span></a>
+                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi"
+                                style="color: white;" data-width="40" data-height="40"></span></a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
@@ -1732,16 +1732,6 @@
                                 <td class="text-center">1cb</td>
                             </tr>
                             <tr>
-                                <td></td>
-                                <td class="text-center"></td>
-                                <td class="text-center"></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td class="text-center"></td>
-                                <td class="text-center"></td>
-                            </tr>
-                            <tr>
                                 <th class="class-border border-0" colspan="10"></th>
                             </tr>
                         </tbody>
@@ -1957,11 +1947,6 @@
                                 <td>Wasabi Root</td>
                                 <td class="text-center">1</td>
                                 <td class="text-center">1gb</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td class="text-center"></td>
-                                <td class="text-center"></td>
                             </tr>
                             <tr>
                                 <th class="class-border border-0" colspan="10"></th>
@@ -2894,17 +2879,6 @@
                         refer to Melee Properties of the same name.</i></p>
                 <ul style="display: none;" class="pl-0 shadow item-section ranged-weapons">
                     <li class="list-group-item list-group-item-action d-flex justify-content-between  property"
-                        data-toggle="collapse" role="button" aria-expanded="false" data-target="#property-1"
-                        id="item-property-1">
-                        <span class="class-nav-item">Loading -<i> Expanded</i></span>
-                    </li>
-                    <div class="collapse abilities property-desc" id="property-1" data-parent="#property-list">
-                        <p class="p-4">Because of the time required to load this weapon, you can fire only one piece
-                            of ammunition from it before needing to reload. To reload, you must spend a number of
-                            attacks equal to the value in parenthesis.</p>
-                    </div>
-
-                    <li class="list-group-item list-group-item-action d-flex justify-content-between  property"
                         data-toggle="collapse" role="button" aria-expanded="false" data-target="#property-2"
                         id="item-property-2">
                         <span class="class-nav-item">Forceful</span>
@@ -2915,6 +2889,18 @@
                             add a damage die up to the value shown in parenthesis.
                         </p>
                     </div>
+                    <li class="list-group-item list-group-item-action d-flex justify-content-between  property"
+                        data-toggle="collapse" role="button" aria-expanded="false" data-target="#property-1"
+                        id="item-property-1">
+                        <span class="class-nav-item">Loading -<i> Expanded</i></span>
+                    </li>
+                    <div class="collapse abilities property-desc" id="property-1" data-parent="#property-list">
+                        <p class="p-4">Because of the time required to load this weapon, you can fire only one piece
+                            of ammunition from it before needing to reload. To reload, you must spend a number of
+                            attacks equal to the value in parenthesis.</p>
+                    </div>
+
+
 
                     <li class="list-group-item list-group-item-action d-flex justify-content-between  property"
                         data-toggle="collapse" role="button" aria-expanded="false" data-target="#property-3"
