--- a/content/classes.html
+++ b/content/classes.html
@@ -21,7 +21,7 @@
 
     <nav class="navbar navbar-dark navbar-expand-xl">
       <div class="navbar-brand  mr-4">
-        <a href="../pergasha.html">
+        <a href="../home.html">
           <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.png">
         </a>
       </div>
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../pergasha.html">Home</a>
+            <a class="nav-link" href="../home.html">Home</a>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
