--- a/content/races.html
+++ b/content/races.html
@@ -23,7 +23,7 @@
 
         <nav class="navbar navbar-dark navbar-expand-xl">
             <div class="navbar-brand  mr-4">
-                <a href="../pergasha.html">
+                <a href="../home.html">
                     <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.png">
                 </a>
             </div>
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../pergasha.html">Home</a>
+                        <a class="nav-link" href="../home.html">Home</a>
                     </li>
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -70,8 +70,8 @@
                         <a class="nav-link" href="rules.html">Rules</a>
                     </li>
                     <li class="nav-item" id="ko-fi-icon">
-                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi" style="color: white;"
-                                data-width="40" data-height="40"></span></a>
+                        <a href="https://ko-fi.com/jesuisfrog"><span class="iconify" data-icon="simple-icons:kofi"
+                                style="color: white;" data-width="40" data-height="40"></span></a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
@@ -96,7 +96,7 @@
     <div class="row justify-content-center mt-2"><button type="button"
             class="btn btn-outline-secondary text-center mb-2 align-self-center" onclick="switchRaces()" id="raceButton"
             style="box-shadow: none;">Old Races</button></div>
-            
+
     <div class="row mt-5 mb-5 flex-wrap justify-content-center container-fluid" id="race-container">
 
         <div class="col mb-5" id="race-list-container">
