Mental AC, Rules change, removed Inspired Will

--- a/content/rules.html
+++ b/content/rules.html
@@ -263,12 +263,20 @@
         <div class="p-2" id="section3">
           <h1 class="arjulian section-title">Inspiration Points & Cheating Fate</h1>
           <h3 class="arjulian">Inspiration</h3>
-          <p>Inspiration Points are rewards for playing your character in a way that’s true to his or her personality
-            traits, ideals, bonds, and flaws. They are also rewards for problem-solving or side quest completion, and
-            you can gain Inspiration Points from camping. Finally, you can also earn Inspiration Points when you
-            accept a Consequence from the GM when you roll a critical failure (or a natural 1 on a d20). </p>
-          <p> You can have a total of 3 Inspiration Points. If you are at your maximum, you cannot gain more
-            Inspiration Points. You also cannot instantly use one to avoid missing out on a reward. </p>
+          <p>Inspiration Points are rewards for:
+          <ul>
+            <li>Playing your character in an interesting and impactful fashion.</li>
+            <li>Problem-solving and cooperating as a team with your party
+              members.</li>
+            <li>Camping activities.</li>
+            <li>End-of-session shout-outs from the table.</li>
+          </ul>
+          </p>
+          <p> You can have a total of 3 Inspiration Points. If you are at your
+            maximum, you cannot gain more Inspiration Points. You also cannot
+            instantly use one to avoid missing out on a reward. At the end of
+            every session, your Inspiration Points reset to 1. If you receive the
+            end-of-session shout-out, you reset your points to 2 instead of 1. </p>
           <div class="ruleBox">
             <h3 class="ruleBoxTitle arjulian p-2">Using Inspiration</h3>
             <p class="p-2">If you have inspiration, you can expend it to do one of the following:
@@ -279,8 +287,8 @@
                 into a hit.</li>
               <li><b>Interrupt: </b>If you have not taken your turn yet this round, you can steal the initiative and
                 take the next turn. Your initiative score is unchanged for subsequent rounds.</li>
-              <li><b>Reject: </b>If you are about to suffer a GM consequence due to rolling a critical failure, you
-                can cancel it.</li>
+              <li><b>Ability: </b>Some abilities may require the use of inspiration to activate or
+                empower.</li>
             </ul>
             </p>
           </div>
@@ -1033,8 +1041,8 @@
             <h3 class="arjulian ruleBoxTitle p-2">Basics to Camp</h3>
             <p class="p-2">To properly set up camp, the following steps should be performed.
             <ul>
-              <li><b>Make Camp: </b>Do Survival checks see how well you set up. The more successes, the better the
-                site.</li>
+              <li><b>Make Camp: </b>The GM will determine the DC for all camping activities depending on the
+                environment.</li>
               <li><b>Organize the Lookout: </b>Lookouts oversee camp defense by watching for threats.</li>
               <li><b>Camp Activities: </b>Party members who are not on Lookout duty can perform one primary
                 camp-related activity in addition to any other basic long rest activities.</li>
@@ -1044,102 +1052,31 @@
             </p>
           </div>
           <h4 class="arjulian">Making Camp</h4>
-          <p>To make camp, each party member must roll a Wisdom (Survival) ability check against a <i>Camping
-              Check</i> target DC (see the Camping Check DC table for examples) as they try to help set up the
-            campsite. The GM makes the final determination for the DC based on the conditions of the area. </p>
-          <p> Party members with proficiency in Animal Handling, Nature, and/or Builder’s Tools may be able to use
-            these skills instead of Survival to assist with camp set up tasks. However, at least one party member must
-            make a Survival check. </p>
-          <p> The more successes the party has, the more thoroughly they prepare the final campsite—making it easier
-            to defend, rest, and perform other camp activities. Refer to the Camp Set Up Results. </p>
-          <p> If anyone makes an Exceptional Success (succeeding by 10 or more than the DC), they can offset one
-            failure. This can only occur once when making camp. Any additional exceptional successes earn the
-            individual an Inspiration Point. If there are no failures, the entire party gains an Inspiration Point
-            when there is at least one exceptional success.</p>
-          <h5 class="arjulian">Camping Check DC</h5>
-          <table class="table-sm table table-striped table-responsive-sm table-bordered" style="max-width: 600px;">
+          <p>The GM makes the determination for all camp activity DC’s based on the conditions of the area. General
+            guidance is
+            listed in the Camping Activity Checks table.</p>
+          <h5 class="arjulian">Camping Activity Checks</h5>
+          <table class="table-sm table table-striped table-responsive-sm table-bordered" style="max-width: 700px;">
             <thead class="thead-dark">
               <th class="text-center">DC</th>
               <th>Description</th>
             </thead>
             <tbody>
               <tr>
+                <td class="text-center">5</td>
+                <td>A perfect campsite, good equipment, a safe location, and good weather.</td>
+              </tr>
+              <tr>
                 <td class="text-center">10</td>
-                <td>Safe site is easy to find. Weather is clear.</td>
+                <td>A decent campsite and/or unfavorable weather.</td>
               </tr>
               <tr>
-                <td class="text-center">15</td>
-                <td>Safe site requires effort to find. The weather is poor.</td>
-              </tr>
-              <tr>
-                <td class="text-center">20</td>
-                <td>Safe site is difficult to find. The weather is terrible.</td>
+                <td class="text-center">15+</td>
+                <td>A shoddy campsite, a dangerous location, and/or terrible weather conditions.</td>
               </tr>
             </tbody>
           </table>
-          <h5 class="arjulian">Camp Set Up Results</h5>
-          <table class="table-sm table table-striped table-responsive-sm table-bordered" style="max-width: 700px;">
-            <thead class="thead-dark">
-              <th class="text-center">Failures</th>
-              <th>Description</th>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="text-center">0</td>
-                <td>A perfect campsite. Activity checks are DC5.</td>
-              </tr>
-              <tr>
-                <td class="text-center">1</td>
-                <td>A decent campsite with one glaring flaw. Activity checks are DC10.</td>
-              </tr>
-              <tr>
-                <td class="text-center">2+</td>
-                <td>A shoddy campsite just barely fit for purpose. Activity checks are DC15.</td>
-              </tr>
-            </tbody>
-          </table>
-          <h5 class="arjulian">Camping Gear</h5>
-          <p>It’s difficult to set up camp in most of the desert wastes without supplies. If you lack appropriate
-            camping equipment such as a bedroll or tent, roll your Survival check with disadvantage. You may ignore
-            this rule if you have expertise in Survival. </p>
-          <p> Some equipment, such as a two-person tent, may count as camping gear for multiple people if they’re
-            willing to share. Alternatively, psionic abilities may supplement or replace the need for specific gear.
-          </p>
-          <h4 class="arjulian">Lookout</h4>
-          <p>Lacking any camp defense is risky—and stupid. The lookout oversees security and watches for potential
-            threats so that others can rest. </p>
-          <p> If you are the lookout, roll an Intelligence (Survival) check to see how well you secure camp against
-            potential dangers. If you have any tools, equipment, trained pets, or abilities that may help, you may
-            roll your check with advantage. </p>
-          <p> Being on lookout takes focus. If you are on lookout duty, you cannot join in any camp activities besides
-            eating, drinking, and sleeping.
-          <ul>
-            <li><b>Exceptional Success: </b>Gain an Inspiration Point.</li>
-            <li><b>Success: </b>You noted weak spots in the camp’s defense and secured them. </li>
-            <li><b>Failure: </b>You did not find gaps in camp’s security. You have disadvantage on Perception checks
-              against any would-be intruders while camping.</li>
-          </ul>
-          </p>
-          <h5 class="arjulian">Ambushed</h5>
-          <p>A warm campfire and the smell of delicious, hot food can attract attention out in the dark wilds—from
-            cruel bandits, to hungry bears, to bloodthirsty cultists. If you let your guard down, you might find both
-            your sleep and your life cut surprisingly short. </p>
-          <p> If an intruder approaches, the lookout rolls a Wisdom (Perception) check against the intruder's Stealth:
-          <ul>
-            <li><b>Success:</b> The lookout detects the intruders and may rouse the party with enough time for people
-              to don light armor.</li>
-            <li><b>Failure:</b> The lookout—and the rest of the party—are caught off-guard and surprised.</li>
-          </ul>
-          </p>
-          <h5 class="arjulian">False Alarms</h5>
-          <p>It’s easy to worry about every shadowed movement and every distant noise in the dark. </p>
-          <p> Occasionally, the GM may ask the lookout to make a Wisdom (Insight) roll to detect a false alarm:
-          <ul>
-            <li><b>Success: </b>The lookout realizes that it’s just a false alarm and doesn’t rouse the party.</li>
-            <li><b>Failure: </b>The lookout wakes the party unnecessarily. Their sleep is disturbed for the rest of
-              the night.</li>
-          </ul>
-          </p>
+
           <h4 class="arjulian">Camp Activities</h4>
           <p>While camping, you can perform one primary activity (in addition to the normal basic activities) before
             you sleep. Below are listed some example activities—if an activity is not covered here, discuss it with
@@ -1207,15 +1144,60 @@
             <li><b>Failure: </b>You are unable to find anything safe or useful.</li>
           </ul>
           </p>
-          <h5 class="arjulian">Play Music</h5>
-          <p>
-            If you know how to play an instrument, you can attempt to play some music for the group. Roll a Charisma
-            or Dexterity (Performance) check to see how well you play.
+          <h5 class="arjulian">Lookout</h5>
+          <p>Lacking any camp defense is risky—and stupid. The lookout oversees security and watches for potential
+            threats so that others can rest. </p>
+          <p> If you are the lookout, roll an Intelligence (Survival) check to see how well you secure camp against
+            potential dangers. If you have any tools, equipment, trained pets, or abilities that may help, you may
+            roll your check with advantage. </p>
+          <p> Being on lookout takes focus. If you are on lookout duty, you cannot join in any camp activities besides
+            eating, drinking, and sleeping.
           <ul>
-            <li><b>Exceptional Success: </b>Your performance was amazing. Choose two party members other than yourself
-              or the lookout—those characters gain a point of inspiration. </li>
-            <li><b>Success: </b>You perform well and inspire one of your allies. Choose a party member other than
-              yourself or the lookout—that character gains a point of inspiration.</li>
+            <li><b>Exceptional Success: </b>Gain an Inspiration Point.</li>
+            <li><b>Success: </b>You noted weak spots in the camp’s defense and secured them. </li>
+            <li><b>Failure: </b>You did not find gaps in camp’s security. You have disadvantage on Perception checks
+              against any would-be intruders while camping.</li>
+          </ul>
+          </p>
+          <div class="ruleBox">
+            <h3 class="arjulian ruleBoxTitle p-2">Ambushed</h3>
+            <p class="p-2">A warm campfire and the smell of delicious, hot food can attract attention out in the dark
+              wilds—from
+              cruel bandits, to hungry bears, to bloodthirsty cultists. If you let your guard down, you might find both
+              your sleep and your life cut surprisingly short. </p>
+            <p class="p-2"> If an intruder approaches, the lookout rolls a Wisdom (Perception) check against the
+              intruder's Stealth:
+            <ul>
+              <li><b>Success:</b> The lookout detects the intruders and may rouse the party with enough time for people
+                to don light armor.</li>
+              <li><b>Failure:</b> The lookout—and the rest of the party—are caught off-guard and surprised.</li>
+            </ul>
+            </p>
+          </div>
+          <div class="ruleBox">
+            <h3 class="arjulian ruleBoxTitle p-2">False Alarms</h3>
+            <p class="p-2">It’s easy to worry about every shadowed movement and every distant noise in the dark.</p>
+            <p class="p-2">Occasionally, the GM may ask the lookout to make a Wisdom (Insight) roll to detect a false
+              alarm:
+            <ul>
+              <li><b>Success: </b>The lookout realizes that it’s just a false alarm and doesn’t rouse the party.</li>
+              <li><b>Failure: </b>The lookout wakes the party unnecessarily. Their sleep is disturbed for the rest of
+                the night.</li>
+            </ul>
+            </p>
+          </div>
+          <h5 class="arjulian">Perform</h5>
+          <p>
+            If you know how to play an instrument, dance, or sing, you can attempt to perform for the group. Roll a
+            Charisma or
+            Dexterity (Performance) check to see how well you perform.
+          <ul>
+            <li><b>Exceptional Success: </b>Your performance was amazing. Your party members gain an additional bonus
+              equal to your Charisma or Dexterity modifier
+              to their camping checks. </li>
+            <li><b>Success: </b>You perform well and entertain your allies. Your party members gain a d4 bonus to their
+              camping checks. This bonus
+              increases by one die category when you reach certain levels: 5th (d6), 11th (d8), and 17th (d10).</li>
             <li><b>Failure: </b>You made an embarrassing mistake. </li>
           </ul>
           </p>
@@ -1234,9 +1216,11 @@
           </p>
           <h5 class="arjulian">Tinker with an Item</h5>
           <p>
-            Sometimes, you find unusual items that have no clear purpose. If you are proficient in Mysteriums, you can
-            attempt to piece together the capabilities of mysteriums and oddities. Roll a Mysterium (Intelligence)
-            check.
+            Sometimes, you find unusual items that have no clear purpose. If you are proficient in Mysteriums or with
+            Tinker’s
+            Tools, you can attempt to piece together the capabilities of mysteriums and oddities. Roll an Intelligence
+            (Mysterium or
+            Tinker’s Tools) check.
           <ul>
             <li><b>Exceptional Success: </b>You can understand the usage of two items. </li>
             <li><b>Success: </b>You can understand the usage of one item.</li>
@@ -1249,10 +1233,11 @@
             If you prefer to spend some time alone—meditating, painting, whittling, watching the stars—you can do so.
             Roll a Wisdom ability check to see if you can unwind.
           <ul>
-            <li><b>Exceptional Success: </b>Your mind is refreshed, and your spirit inspired. Gain a point of
-              inspiration and your Intelligence modifier in Psi Points. </li>
-            <li><b>Success: </b>You feel inspired by your seclusion—gain a point of inspiration or your Intelligence
-              modifier in Psi Points.</li>
+            <li><b>Exceptional Success: </b>Your mind is invigorated. Select two out of the three: one point of
+              inspiration, your Intelligence modifier in Psi
+              Points, or remove one level of Fatigue. You cannot double up on any options.</li>
+            <li><b>Success: </b>You feel refreshed—gain your Intelligence modifier in Psi Points or remove one level of
+              Fatigue.</li>
             <li><b>Failure: </b>You couldn’t relax as something—or someone—was irritating you too much.</li>
           </ul>
           </p>
@@ -2309,6 +2294,12 @@
             can’t use effects that require sight if you are blinded. </p>
           <p> The nature of psionics means it is often difficult to ascertain who or what is targeting you. For this
             reason, no one gains advantage on psionic attacks for being hidden or surprising targets. </p>
+          <h3 class="arjulian">Mental Armor</h3>
+          <p>Psionic powers often affect the physical environment and body. Some abilities, however, are direct attacks
+            to the mind.
+            Psionic attacks (such as Thought Bolt) target a creature’s Mental Armor Class instead of physical Armor
+            Class. Your Mental AC = 10 + your Intelligence modifier + your proficiency bonus. Psionic abilities that
+            trigger on a weapon hit still rely on physical AC.</p>
           <h3 class="arjulian">Psionics and Rage</h3>
           <p> If you are a Barbarian and enter Rage, you lack the mental acuity to use psionic powers that require
             concentration and finesse, and you cannot switch your psionic focus. While raging, you can activate
