--- a/content/psionics.html
+++ b/content/psionics.html
@@ -133,7 +133,7 @@
                             <td class="text-center">1</td>
                             <td class="text-center">2</td>
                             <td class="text-center">Psionic Talent, Psionic Discipline,
-                                Proficiencies[3]**, Feat</td>
+                                Proficiencies[3]**, Racial Features, Feat</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">2nd</td>
@@ -147,7 +147,7 @@
                             <td class="text-center">1</td>
                             <td class="text-center">—</td>
                             <td class="text-center">3</td>
-                            <td class="text-center">—</td>
+                            <td class="text-center">Racial Feature</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">4th</td>
@@ -161,7 +161,7 @@
                             <td class="text-center">2</td>
                             <td class="text-center">+1d4[2]</td>
                             <td class="text-center">3</td>
-                            <td class="text-center">—</td>
+                            <td class="text-center">Racial Feature</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">6th</td>
@@ -175,7 +175,7 @@
                             <td class="text-center">2</td>
                             <td class="text-center">—</td>
                             <td class="text-center">4</td>
-                            <td class="text-center">—</td>
+                            <td class="text-center">Racial Feature</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">8th</td>
@@ -189,7 +189,7 @@
                             <td class="text-center">2</td>
                             <td class="text-center">—</td>
                             <td class="text-center">4</td>
-                            <td class="text-center">—</td>
+                            <td class="text-center">Racial Feature</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">10th</td>
@@ -203,7 +203,7 @@
                             <td class="text-center">3</td>
                             <td class="text-center">—</td>
                             <td class="text-center">5</td>
-                            <td class="text-center">Select a Psionic Mastery***</td>
+                            <td class="text-center">Select a Psionic Mastery***, Racial Feature</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">12th</td>
@@ -217,7 +217,7 @@
                             <td class="text-center">3</td>
                             <td class="text-center">+1d6[3]</td>
                             <td class="text-center">5</td>
-                            <td class="text-center">—</td>
+                            <td class="text-center">Racial Feature</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">14th</td>
@@ -231,7 +231,7 @@
                             <td class="text-center">4</td>
                             <td class="text-center">—</td>
                             <td class="text-center">6</td>
-                            <td class="text-center">Select a Psionic Talent</td>
+                            <td class="text-center">Select a Psionic Talent, Racial Feature</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">16th</td>
@@ -245,7 +245,7 @@
                             <td class="text-center">4</td>
                             <td class="text-center">—</td>
                             <td class="text-center">6</td>
-                            <td class="text-center">Mastery Improvement</td>
+                            <td class="text-center">Mastery Improvement, Racial Feature</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">18th</td>
@@ -259,7 +259,7 @@
                             <td class="text-center">4</td>
                             <td class="text-center">+1d8[4]</td>
                             <td class="text-center">7</td>
-                            <td class="text-center">+1 Training Point, +1 Proficiency Point</td>
+                            <td class="text-center">+1 Training Point, +1 Proficiency Point, Racial Feature</td>
                         </tr>
                         <tr>
                             <td class="text-center" scope="row">20th</td>
@@ -1084,9 +1084,11 @@
                             <li><b>Evoking Time: </b>1 bonus action</li>
                             <li><b>Range: </b>Self</li>
                             <li><b>Duration: </b>Instantaneous</li>
-                            <li>You gather your energy to pack a lot into a single moment. If you have not moved
-                                this turn, you may use your bonus action and gain an action. Your movement speed is
-                                0 until the start of your next turn.</li>
+                            <li>You gather your energy to pack a lot into a single moment. If you have not moved this
+                                turn, you may use your bonus action and gain an action. This action can be used only to
+                                make one weapon attack, use a psionic power or talent (following your Psi limit), or
+                                activate an item or mysterium requiring an action. Your movement speed is 0 until the
+                                start of your next turn.</li>
                         </ul>
                         <span class="psionics-subtitle">Déjà Vu</span>
                         <ul style="list-style-type:none;">
@@ -2316,10 +2318,13 @@
                         <ul style="list-style-type:none;">
                             <li><b>Cost: </b>2 psi point</li>
                             <li><b>Evoking Time: </b>1 action</li>
-                            <li><b>Range: </b>One piece of armor or shield</li>
-                            <li><b>Duration: </b>1 hour</li>
-                            <li>You can make a piece of armor or a shield that you touch harder and more resilient.
-                                For the duration, that object increases its AC value by 1 but doubles its weight.
+                            <li><b>Range: </b>Touch</li>
+                            <li><b>Duration: </b>1 minute</li>
+                            <li>You can make a creature you touch heavier, making them slow and clumsy. A creature must
+                                make a Constitution saving throw
+                                or have its weight doubled. Its movement speed is reduced by half, and it takes a d4
+                                penalty on all checks, attacks, and
+                                saving throws relying on Dexterity.
                             </li>
                         </ul>
                         <span class="psionics-subtitle">Inertial Punch </span>
@@ -3062,7 +3067,7 @@
                             <li><b>Cost: </b>5-7 psi point</li>
                             <li><b>Evoking Time: </b>1 bonus action</li>
                             <li><b>Range: </b>Self</li>
-                            <li><b>Duration: </b>Concentration, up to 1 minute</li>
+                            <li><b>Duration: </b>Concentration, up to 10 minutes</li>
                             <li>You gain truesight with a radius of 30 feet which lasts until your concentration ends.
                                 If you spend 6 psi, the duration increases to 5 minutes and the range increases to 60
                                 feet. If you spend 7 psi, the duration increases to 10 minutes and the range increases
