--- a/content/characters.html
+++ b/content/characters.html
@@ -1088,7 +1088,7 @@
           </div>
           <div class="flip-card-back">
             <h4>Tyranik The Tall Vor-Hunn</h4>
-            <i>Thrane of the Fire Tribe</i>
+            <i>Thrane of the Fire Tribe, Deceased</i>
             <!-- <p class="p-1" style="font-size: 18px;">Info</p> -->
           </div>
         </div>
