--- a/content/races.html
+++ b/content/races.html
@@ -219,7 +219,7 @@
                                 </li>
                                 <li>
                                     If you are <strong>twisted</strong>, select one racial feature from your tribal
-                                    heritage and one from the Twisted List.
+                                    heritage and one from the Twisted Pergashan Features List.
                                 </li>
                             </ul>
                         </td>
@@ -502,7 +502,7 @@
                                         level: 5.)</i>
                                 </li>
                                 <li>
-                                    <strong>Paragon of the Gem Tribe.</strong>Little is known of the gem titans, but
+                                    <strong>Paragon of the Gem Tribe.</strong> Little is known of the gem titans, but
                                     your body is suffused with their alien power. You can sacrifice
                                     your lifeforce to harvest psi-crystals from your body. These
                                     crystals can store Psi points, push limits, or intensify your psionic
@@ -603,7 +603,7 @@
                                         7.)</i>
                                 </li>
                                 <li>
-                                    <strong>Paragon of the Sand Tribe.</strong>Your ancestor’s blood infuses you
+                                    <strong>Paragon of the Sand Tribe.</strong> Your ancestor’s blood infuses you
                                     with an affinity to the mysteries and heat of the desert. When
                                     you are at least 15 feet from a creature, their ranged attacks
                                     and abilities are made at disadvantage as sand or heat waves
@@ -666,7 +666,7 @@
                                     bludgeoning damage. <i>(Minimum level: 7.)</i>
                                 </li>
                                 <li>
-                                    <strong>Paragon of the Stone Tribe.</strong>Your ancestor’s blood infuses you
+                                    <strong>Paragon of the Stone Tribe.</strong> Your ancestor’s blood infuses you
                                     with an affinity to the deepest stones beneath the earth and
                                     the secrets they hold. You gain resistance to slashing damage
                                     and the ability to call upon the secrets and stories of the stone to protect you.
@@ -729,7 +729,7 @@
                                     damage. <i>(Minimum level: 7.)</i>
                                 </li>
                                 <li>
-                                    <strong>Paragon of the Storm Tribe.</strong>Your ancestor’s blood infuses you
+                                    <strong>Paragon of the Storm Tribe.</strong> Your ancestor’s blood infuses you
                                     with an affinity to the raging tempests of the seas and skies. If
                                     you are targeted with an attack that deals lightning damage,
                                     the damage you resist (whether through lightning resistance or
@@ -1664,7 +1664,7 @@
                     </tr>
                     <tr class="touchedKinFeatures hide">
                         <td>
-                            <strong>Wings.</strong>Choose between feathered, insectoid, or leathery
+                            <strong>Wings.</strong> Choose between feathered, insectoid, or leathery
                             wings. At 1st level, they are useable, but your twisted nature
                             makes it impossible to fly for long periods. The wings require
                             conditioning and patience to fully master. Once per short rest,
@@ -1725,8 +1725,8 @@
                                     takes 1d6 + your Dexterity modifier in slashing damage.
                                 </li>
                                 <li>
-                                    <strong>Slash:</strong>As a bonus action you make a slashing wing attack
-                                    against a single target. On a hit, the target takes 2d4 + yourDexterity modifier in
+                                    <strong>Slash:</strong> As a bonus action you make a slashing wing attack
+                                    against a single target. On a hit, the target takes 2d4 + your Dexterity modifier in
                                     slashing damage.
                                 </li>
                             </ul>
@@ -1811,8 +1811,8 @@
                             <strong>Select 2 racial features.</strong> Some features have minimum level
                             requirements or prerequisites. Pureblooded lizardfolk may select
                             from the pureblooded and the general lizardfolk features lists.Twisted lizardfolk may select
-                            from general lizardfolk racial features, but at least one feature must be from the Touched
-                            Kin Racial Features list that is not marked with an asterisk.
+                            from general lizardfolk racial features, but at least one feature must be from the Twisted
+                            Lizardfolk Features list.
                         </td>
                     </tr>
 
@@ -2011,7 +2011,7 @@
                     </tr>
                     <tr class="purebloodedLizardFeatures hide">
                         <td>
-                            <strong>Feeding Frenzy.</strong>In battle, you can throw yourself into a vicious
+                            <strong>Feeding Frenzy.</strong> In battle, you can throw yourself into a vicious
                             feeding frenzy. As a bonus action, you can make a special
                             attack with your bite. If the attack hits, it deals its normal
                             damage, and you gain temporary hit points equal to your
@@ -2026,7 +2026,7 @@
                     </tr>
                     <tr class="purebloodedLizardFeatures hide">
                         <td>
-                            <strong>Greater Amphibian.</strong>Your swim speed increases to 50 feet, and
+                            <strong>Greater Amphibian.</strong> Your swim speed increases to 50 feet, and
                             you can breathe water for 1 hour. Additionally, you have
                             advantage on any Perception or Survival checks while
                             underwater. <i>(Minimum level: 9. Requires Amphibious.)</i>
@@ -2040,7 +2040,7 @@
                     </tr>
                     <tr class="purebloodedLizardFeatures hide">
                         <td>
-                            <strong>Improved Natural Camouflage</strong> You can use a bonus action to
+                            <strong>Improved Natural Camouflage.</strong> You can use a bonus action to
                             hide and when you make a weapon attack while hidden, you
                             add one weapon die to the damage. <i>(Minimum level: 11.
                                 Requires Natural Camouflage.)</i>
